--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Diamo official </title>
+    <title>Diamo Official</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -155,7 +155,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="mb-0">Thank you for giving me 2,500 diamonds.</p>
+                        <p class="mb-0">Thank you for giving me 2,500 diamonds... #FreeFireDiamonds #Freefire  #Diamonds #GamerLife  </p>
                     </div>
                     <div class="testimonial-item rounded p-4">
                         <div class="d-flex align-items-center mb-4">
@@ -172,7 +172,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                        <p class="mb-0">Please help me i need more diamond... #MobileGaming  #GamingVideos #MobileGames #Freefire </p>
                     </div>
                     <div class="testimonial-item rounded p-4">
                         <div class="d-flex align-items-center mb-4">
@@ -189,7 +189,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                        <p class="mb-0">Hard work pays off! Developing App is tough, but nothing feels better than earning diamonds the right way! 💎</p>
                     </div>
                     <div class="testimonial-item rounded p-4">
                         <div class="d-flex align-items-center mb-4">
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+                        <p class="mb-0">They say money can’t buy happiness… but have they ever bought diamonds in Free Fire? 💎💸</p>
                     </div>
                 </div>
             </div>
