--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                         <p><i class="fa fa-envelope me-3"></i>blackshadowawm@gmail.com</p>
                         <div class="d-flex pt-2">
                         <!--     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a> --> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100034312943333"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/insta_id_101error?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
                         <!--     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a> -->
                         </div>
                     </div>
@@ -267,4 +267,4 @@
     <script src="js/main.js"></script>
 </body>
 
-</html>
+    </html>
